clusters/homelab/apps/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  labels:
    traefik.tafu.casa/instance: internal
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - radarr.cl.tafu.casa
      secretName: wildcard-cl-tafu-casa-tls
  rules:
    - host: radarr.cl.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
